- setup material design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<mat-menu yPosition="above">
-  <button mat-menu-item routerLink="checkout"><mat-icon>cart</mat-icon> Checkout</button>
-</mat-menu>
-
+<app-main-menu></app-main-menu>
 <app-product-list></app-product-list>
 <router-outlet></router-outlet>
