--- a/src/app/product-list/product-detail/product-detail.component.html
+++ b/src/app/product-list/product-detail/product-detail.component.html
@@ -1,10 +1,25 @@
 <mat-card>
-  <mat-card-header></mat-card-header>
-  <mat-card-content>
-    Nombre: {{product.name}}
-    Precio: {{product.price}}
-    Cantidad disponible: {{product.quantity}}
-    Fecha de expiración: {{product.expirationDate}}
-    Garantía: {{product.warranty}}
+  <mat-card-header>
+    <mat-card-title *ngIf="product">      
+      {{product.name || ''}}
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content *ngIf="product">
+    <!-- <mat-grid-list cols="2" rowHeight="2:1">
+        <mat-grid-tile>Precio:</mat-grid-tile>
+        <mat-grid-tile>{{product.price || '0.00'}}</mat-grid-tile>
+        <mat-grid-tile>Cantidad disponible:</mat-grid-tile>
+        <mat-grid-tile>{{product.quantity || '0'}}</mat-grid-tile>
+        <mat-grid-tile>Fecha de expiración:</mat-grid-tile>
+        <mat-grid-tile>{{product.expirationDate || ''}}</mat-grid-tile>
+        <mat-grid-tile>Garantía:</mat-grid-tile>
+        <mat-grid-tile>{{product.warranty || ''}}</mat-grid-tile>
+    </mat-grid-list> -->
+    <mat-list role="list">
+      <mat-list-item role="listitem">Precio: {{product.price || '0.00'}}</mat-list-item>
+      <mat-list-item role="listitem">Cantidad disponible: </mat-list-item>
+      <mat-list-item role="listitem">Fecha de expiración: {{product.expirationDate || ''}}</mat-list-item>
+      <mat-list-item role="listitem">Garantía: {{product.warranty || ''}}</mat-list-item>
+    </mat-list> 
   </mat-card-content>
 </mat-card>
