--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,1 +1,3 @@
-
+<mat-list role="list">
+        <app-product-detail *ngFor="let product of productList" [product]="product"></app-product-detail>    
+</mat-list>
