--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-main-menu></app-main-menu>
-<app-product-list></app-product-list>
-<router-outlet></router-outlet>
+<div class="mat-app-background w-100">
+  <app-main-menu></app-main-menu>
+  <router-outlet></router-outlet>
+</div>
