--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="mat-app-background w-100">
+<div class="mat-app-background w-100 h-100">
   <app-main-menu></app-main-menu>
   <router-outlet></router-outlet>
 </div>
