--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,26 +1,34 @@
 <div class="container">
   <div class="row w-100">
-    <div class="col-md-6">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>
-            Facturación
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <div class="row w-100" *ngFor="let product of productList">
-            <div class="col-md-6">Producto: </div><div class="col-md-6">{{ product.name }}</div>
-            <div class="col-md-6">Precio:</div><div class="col-md-6">{{ product.price }}</div>
-            <div class="col-md-6">Cantidad</div><div class="col-md-6">{{ quantity }}</div>
-          </div>
-        </mat-card-content>
-      </mat-card>
+    <div class="col-md-6 text-center">
+      <cdk-virtual-scroll-viewport itemSize="5" class="w-100 cdk-viewport-style">
+          <mat-card *cdkVirtualFor="let order of orders" class="order-card">
+            <mat-card-header>
+              <mat-card-title>
+                {{ order.product.name }}
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <div class="row w-100">
+                <div class="col-md-6">Precio:</div><div class="col-md-6">{{ order.product.price }}</div>
+                <div class="col-md-6">Cantidad</div><div class="col-md-6">{{ order.itemsCount }}</div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+      </cdk-virtual-scroll-viewport>
     </div>
     <div class="col-md-6">
-      <input placeholder="Vendedor" [(ngModel)]="salesman">
-      <input placeholder="Cliente" [(ngModel)]="client">
+      <mat-form-field appearance="outline">
+        <mat-label>Vendedor</mat-label>
+        <input matInput placeholder="Vendedor" [(ngModel)]="salesman">
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+          <mat-label>Cliente</mat-label>
+        <input matInput placeholder="Cliente" [(ngModel)]="client">
+      </mat-form-field>
+      
       <mat-divider></mat-divider>
-      <button mat-raised-button (click)="makePayment()" [disabled]="!amount || !salesman || !client">
+      <button mat-raised-button (click)="makePayment()" [disabled]="!amount || !salesman || !client" class="payment-button">
         <mat-icon>payment</mat-icon> Realizar Pago
       </button>
     </div>
