--- a/src/app/checkout/checkout.component.scss
+++ b/src/app/checkout/checkout.component.scss
@@ -1,11 +1,45 @@
-body {
-  width: 100%;
-  height: 100%;
+@import '../../styles.scss';
+
+.container {
+  display: flex;
+  align-self: center;
 }
+
 .widget {
   width: 100%;
 }
 
-.checkout-summary {
-  max-width: 100px;
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $scroll-bar-bg; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+.cdk-viewport-style {
+  height: 200px;
+  width: 100%;
+}
+
+.order-card {
+  margin: 2px 0px 3px 0px;
+}
+
+.payment-button {
+  margin: 2px 0px 3px 0px;
 }
