--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <mat-divider style="height: 150px;"></mat-divider>
   <div class="row w-100">
     <div class="col-md-6 text-center">
       <cdk-virtual-scroll-viewport itemSize="5" class="w-100 cdk-viewport-style">
