--- a/src/app/product-maintenance/product-maintenance.component.html
+++ b/src/app/product-maintenance/product-maintenance.component.html
@@ -1,59 +1,62 @@
 <div class="container">
-  <input matInput disabled *ngIf="product.id" [value]="product.id">
-  <div class="row">
-    <div class="col-md-6">      
-      <mat-form-field appearance="outline" class="d-block">
-        <mat-label>Nombre</mat-label>
-        <input matInput placeholder="Nombre" [ngModel]="product.name">
-      </mat-form-field>
-    </div>
-    
-    <div class="col-md-6">  
-      <mat-form-field appearance="outline" class="d-block">        
-          <mat-label>Cantidad</mat-label>
-          <input matInput placeholder="Cantidad" [ngModel]="product.quantity">
-      </mat-form-field>
-    </div>
-    
-      <div class="col-md-6">  
-      <mat-form-field appearance="outline" class="d-block">
-          <mat-label>Precio</mat-label>
-          <input matInput placeholder="Precio" [ngModel]="product.price">
-      </mat-form-field>
-      </div>
-    
-      <div class="col-md-6">  
-      <mat-form-field appearance="outline" class="d-block">
-          <mat-label>Precio minimo</mat-label>
-          <input matInput placeholder="Precio minimo" [ngModel]="product.minPrice">
-      </mat-form-field>
-      </div>
-    
-      <div class="col-md-6">  
-      <mat-form-field appearance="outline" class="d-block">
-          <mat-label>Precio maximo</mat-label>
-          <input matInput placeholder="Precio maximo" [ngModel]="product.maxPrice">
-      </mat-form-field>
-      </div>
-    
-      <div class="col-md-6">  
-      <mat-form-field appearance="outline" class="d-block">
-          <mat-label>Fecha de expiración (Opcional)</mat-label>
-          <input matInput placeholder="Fecha de expiración (Opcional)" [ngModel]="product.expirationDate">
-      </mat-form-field>
-      </div>
-    
-      <div class="col-md-6">  
-      <mat-form-field appearance="outline" class="d-block">
-          <mat-label>Garantía (Opcional)</mat-label>
-          <input matInput placeholder="Garantía (Opcional)" [ngModel]="product.warranty">
-      </mat-form-field>
+    <mat-form-field appearance="outline" class="d-block"  *ngIf="product._id">
+      <mat-label>Id</mat-label>
+      <input matInput disabled [value]="product._id">
+    </mat-form-field>
+    <div class="row">
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Nombre</mat-label>
+          <input matInput placeholder="Nombre" [(ngModel)]="product.name">
+        </mat-form-field>
       </div>
 
-      <div class="col-md-6">        
-        <button mat-raised-button (click)="save()" color="primary">
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Cantidad</mat-label>
+          <input matInput placeholder="Cantidad" [(ngModel)]="product.quantity">
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Precio</mat-label>
+          <input matInput placeholder="Precio" [(ngModel)]="product.price">
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Precio minimo</mat-label>
+          <input matInput placeholder="Precio minimo" [(ngModel)]="product.minPrice">
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Precio maximo</mat-label>
+          <input matInput placeholder="Precio maximo" [(ngModel)]="product.maxPrice">
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Fecha de expiración (Opcional)</mat-label>
+          <input matInput placeholder="Fecha de expiración (Opcional)" [(ngModel)]="product.expirationDate">
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" class="d-block">
+          <mat-label>Garantía (Opcional)</mat-label>
+          <input matInput placeholder="Garantía (Opcional)" [(ngModel)]="product.warranty">
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <button mat-raised-button (click)="save()" color="primary" [disabled]="!product">
           Añadir
         </button>
       </div>
-  </div>
+    </div>
 </div>
